# mcp-freecad

./: .cursorignore  .cursorindexingignore  .dockerignore  .editorconfig  .flake8  .gitignore  .npmrc  .pre-commit-config.yaml  ADDON_CRASH_FIX_FINAL_SUMMARY.md  AI_ASSISTANT_GUIDE.md  AI_CONVERSATION_ANALYSIS.md  ARCHITECTURE_REVIEW.md  BRANCH_INFO.md  CHANGELOG.md  CLAUDE_DESKTOP_INTEGRATION.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRASH_FIX_SUMMARY.md  CRASH_FIX_SUMMARY_2025-06-12.md  DEEP_CLEANUP_SUMMARY.md  DIAGNOSTIC_FIXES_SUMMARY.md  DOCKER_FREECAD_OPTIONS.md  Dockerfile  FASTMCP_MIGRATION.md  FINAL_CRASH_FIX_SUMMARY.md  FIX_IMPLEMENTATION_SUCCESS.md  FREECAD_ADDON_RUNTIME_FIXES.md  FREECAD_ADDON_SYNTAX_FIXES.md  FREECAD_AI_FIXED_STATUS.md  FREECAD_INTEGRATION.md  FREECAD_SERVER_SETUP.md  IMPORT_FIXES_SUMMARY.md  INSTALLATION.md  INSTALLER_SUMMARY.md  INSTALL_SCRIPTS.md  LICENSE  LIVE_HOUSE_TEST_README.md  Makefile  (+127 more)
.cursor/: knowledge-graph.json  mcp.json  modes.json
.cursor/summeries/: FCAI001_IMPLEMENTATION_SUMMARY.md
.cursor/tasks/: ADVANCED_CLEANUP_code_refactoring_optimization_completed.md  DEEP_CLEANUP_comprehensive_cleanup_completed.md  FC2_MISSING_TOOLS_analysis_and_recommendations_pending.md  FCAD001_freecad-addon-gui-development_in_progress.md  FCAD001_freecad-addon-gui-development_pending.md  FREECAD_RUNTIME_FIXES_workbench_errors_completed.md  IMPLEMENT_FIXES_critical_issues_repair_completed.md  STATUS_REPORT_2024-12-19.md  STATUS_REPORT_2024-12-19_FINAL.md  SYNTAX_FIX_freecad_addon_errors_completed.md  TASK_1_1_advanced_primitives_tool_completed.md  TASK_1_2_advanced_operations_tool_completed.md  TASK_1_3_surface_modification_tool_completed.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.plandex-v2/: projects-v2.json
MCPIndicator/: CHANGELOG.md  README.md  package.xml  pyproject.toml  setup.py  ui_manager.py
MCPIndicator/MCPIndicator/: Init.py  InitGui.py  config_manager.py  connection_manager.py  connection_status_dialog.py  dependency_manager.py  path_finder.py  process_manager.py  settings_dialog.py  status_checker.py  ui_manager.py
MCPIndicator/MCPIndicator/rpc_server/: __init__.py  rpc_server.py  serialize.py
MCPIndicator/examples/: rpc_client_example.py
MCPIndicator/scripts/: install.py
assets/: test_model.step  test_server.stl
configs/: README.md  config.template.json  cursor_config.json
data/: freecad_version_test.py
docs/: ADDON_RENAME_SUMMARY.md  ALLOWED_OPTIONS.md  CONNECTION_METHODS.md  FASTMCP_IMPLEMENTATION.md  FLOWCHART.md  FREECAD_INTEGRATION.md  FREECAD_SERVER_SETUP.md  OPTIMIZATION_FEATURES.md  PYTHON_INTERPRETER_SETUP.md  RELEASE_NOTES_v1.0.0.md  SERVER.md  freecad_ai_diagnostic_report_20250611_204353.txt
docs/summaries/: CONFIGMANAGER_ATTRIBUTE_FIX_SUMMARY.md  CRASH_FIX_SUMMARY.md  FREECAD_AI_ADDON_COMPLETE_FIX_SUMMARY.md  IMPORT_FIXES.md  OPENROUTER_ASYNC_FIX_SUMMARY.md  QLAYOUT_FIX_COMPLETE.md
examples/: demo.py  freecad_cli_test.py  test_freecad_connection.py  test_freecad_import.py  test_freecad_subprocess.py  use_freecad.py
freecad-addon/: AI_MODELS_SUPPORTED.md  CHANGELOG.md  INSTALL.md  InitGui.py  README.md  THINKING_MODE_GUIDE.md  WORKBENCH_INTEGRATION_COMPLETE.md  __init__.py  addon_config.json  freecad_mcp_workbench.py  install_dependencies.py  metadata.txt  package.xml  requirements.txt
freecad-addon/ai/: __init__.py  ai_manager.py  base_provider.py  claude_provider.py  provider_integration_service.py
freecad-addon/api/: __init__.py  events.py
freecad-addon/clients/: __init__.py
freecad-addon/config/: config_manager.py
freecad-addon/events/: __init__.py  command_events.py
freecad-ai/: .salt  CHANGELOG.md  CHAT_AGENT_IMPROVEMENTS.md  INSTALL.md  InitGui.py  README.md  __init__.py  addon_config.json  api_keys.enc  freecad_ai_workbench.py  install_dependencies.py  install_dependencies_fixed.py  mcp_server.py  requirements.txt
freecad_addon/: .gitignore  README.md  package.xml  setup.py
freecad_addon/MCPIndicator/: InitGui.py  config_manager.py  dependency_manager.py
freecad_addon/scripts/: install.py  install.sh
freecad_addon/src/: REFACTORING.md
freecad_addon/tests/: __init__.py
freecad_mcp_indicator/: .flake8  CHANGELOG.md  README.md  package.xml  requirements-dev.txt  requirements.txt  setup.py
freecad_mcp_indicator/.github/workflows/: ci.yml
freecad_mcp_indicator/mcp_indicator/: InitGui.py  REFACTORING.md  __init__.py  config_manager.py  flow_visualization.py  path_finder.py  process_manager.py  status_checker.py  ui_manager.py
freecad_mcp_indicator/scripts/: install.py  install.sh
freecad_mcp_indicator/tests/: test_basic.py
mcp-freecad-server/: app.py  config.json  requirements.txt  test_api.py
mcp_venv/: pyvenv.cfg
scripts/: README.md  debug_provider_selection.py  delete_backup_files.py  final_provider_verification.py  final_verification_test.py  house_modeling_script.py  install-global.sh  launch_mcp_server.py  manage_servers.py  run-docker.sh  run_house_direct.py  run_house_macro.py  run_live_house_test.py  run_live_house_test_fixed.py  run_live_house_test_mcp.py  run_mcp_server.py  run_tests.py  start_freecad_with_server.sh  start_mcp.py  start_mcp_server.sh  start_server.py  sync_addon.py  syntax_check.py  test_configmanager_fix.py  test_fastapi_compat.py  test_freecad_api_compat.py  test_freecad_integration.py  test_layout_fix.py  test_mcp_connection.py  test_nuclear_minimal.sh  test_openrouter_models_fix.py  test_provider_fixes.py  test_provider_fixes_simple.py  test_provider_selector.py  test_provider_service_fix.py  troubleshoot_freecad.py  urgent_fixes_verification.py  validate_fixes.py
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  fixtures.py  test_connection_methods.py  test_fastmcp_server.py  test_freecad_mcp_server.py  test_house_modeling_scenario.py  test_integration.py  test_progress_reporting.py  test_recovery.py  test_server.py  test_server_integration.py
(+237 files in other folders)
