[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-freecad"
version = "0.3.1"
description = "MCP Protocol integration for FreeCAD"
readme = "README.md"
authors = [
    {name = "MCP-FreeCAD Team", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Computer Aided Design",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.1.0",
    "requests>=2.28.2",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/jango-blockchained/mcp-freecad"
"Bug Tracker" = "https://github.com/jango-blockchained/mcp-freecad/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_freecad"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 