[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-freecad"
version = "1.0.0"
description = "MCP Protocol integration for FreeCAD"
readme = "README.md"
authors = [
    {name = "jango-blockchained", email = "info@cryptolinx.de"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Computer Aided Design",
]
dependencies = [
    "fastmcp>=2.13.0",
    "mcp>=1.20.0",
    "loguru>=0.7.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "coverage>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jango-blockchained/mcp-freecad"
"Bug Tracker" = "https://github.com/jango-blockchained/mcp-freecad/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_freecad"]

[tool.black]
line-length = 88
target-version = ["py38"]
extend-exclude = "(squashfs-root|.venv)"

[tool.isort]
profile = "black"
line_length = 88
skip = ["squashfs-root", ".venv"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = ".git,__pycache__,docs,squashfs-root,.venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "house_scenario: marks tests as house modeling scenario tests",
    "unit: marks tests as unit tests",
    "mock: marks tests that use mocks"
]
