[metadata]
name = mcp-freecad
version = 0.1.0
description = MCP Protocol integration for FreeCAD
long_description = file: README.md
long_description_content_type = text/markdown
author = MCP-FreeCAD Team
author_email = example@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Computer Aided Design

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    fastapi>=0.95.0
    uvicorn[standard]>=0.22.0
    pydantic>=2.0.0
    loguru>=0.7.0
    python-jose[cryptography]>=3.3.0
    python-multipart>=0.0.6
    aiofiles>=23.1.0
    requests>=2.28.2

[options.packages.find]
where = src 